fix intro title on mobile

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -14,7 +14,6 @@
 
 .contacts__container {
   width: 100%;
-  min-width: 400px;
 
   @include vp-1199 {
     margin: 0 auto;
