--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,7 +1,9 @@
 .form {
   form {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    row-gap: 20px;
   }
 
   input {
@@ -40,18 +42,15 @@
   @include vp-1199 {
     width: 206px;
   }
-
-  &:nth-child(2n) {
-    margin: 0 0 0 auto;
-  }
 }
 
 .form__submit {
   width: 100%;
+  grid-column: 1 / 3;
 }
 
 .form__submit-button {
-  margin: 30px 0 0;
+  margin: 20px 0 0;
   padding: 15px 20px;
   width: 100%;
   border: 2px solid $color-default-white;
